2007-12-17  Akim Demaille  <demaille@gostai.com>

	Factor vars and uservars code.
	* include/kernel/uvariable.hh, src/uvariable.cc (UVariable::print):
	New.
	(operator <<(ostream, UVariable)): Use it.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	Use libport::exit.
	* src/console-server.cc: to get rid of a few braces.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	/!\ freq -> period.
	* include/kernel/userver.hh (frequency_, getFrequency): Rename as...
	(period_, period_get): these.
	* include/kernel/userver.hxx: New.
	* src/console-server.cc, src/userver.cc, src/uvariable.cc,
	* Makefile.am: Adjust.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	Fix SEGV.
	* src/uvariable.cc: Assert that urbiserver is defined.
	* src/console-server.cc: Set up the network after the server,
	as the former uses the latter.
	Diagnosed by Matthieu Nottale.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	Use libport::program_name.
	* src/console-server.cc: here.

2007-12-16  Guillaume Deslandes  <deslandes@gostai.com>

	Fix event list printing command.
	* src/ucommand.cc: Here.

2007-12-16  Guillaume Deslandes  <deslandes@gostai.com>

	Sort output for vars and uservars commands.
	* src/ucommand.cc: Here.

2007-12-16  Guillaume Deslandes  <deslandes@gostai.com>

	Use UValue::echo to print strings in vars and uservars commands.
	* src/ucommand.cc: Here.

2007-12-14  Guillaume Deslandes  <deslandes@gostai.com>

	Make good use of period in urbi-console.
	* src/console-server.cc: Here.
	The "utime() < startTime + period" test was never true.

2007-12-14  Matthieu Nottale  <nottale@gostai.com>

	Fix loadFile which can be used for binaries.
	* include/kernel/userver.hh: Add extra parameter to loadFile to
	  specify Queue type.
	* src/uexpression.cc: Pass it.
	* src/userver.cc: Do not output #push and #pop to DATA queue.

2007-12-14  Akim Demaille  <demaille@gostai.com>

	Let urbi-console support network connections.
	Subscribe to src/network
	* src/Makefile.am: Adjust.