@@ -1,5 +1,10 @@
 2007-12-17  Akim Demaille  <demaille@gostai.com>
 
+	Var renaming.
+	* src/uvariablename.cc: here.
+
+2007-12-17  Akim Demaille  <demaille@gostai.com>
+
 	Factor vars and uservars code.
 	* include/kernel/uvariable.hh, src/uvariable.cc (UVariable::print):
 	New.
